--- a/ansible/playbooks/stack_restart.yml
+++ b/ansible/playbooks/stack_restart.yml
@@ -29,6 +29,7 @@
         state: restarted
 
     - wait_for: 
+        host: "{{ ansible_eth1.ipv4.address }}"
         port: 3306
         state: started
 
